[metadata]
name = pyDE1
version = 0.9.1
author = Jeff Kletsky
author_email = git-commits@allycomm.com
description = Controller for Decent Espresso DE1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeffsf/pyDE1
project_urls =
    Bug Tracker = https://github.com/jeffsf/pyDE1/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: AsyncIO
    Intended Audience :: Developers
    Topic :: Home Automation
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.8
install_requires =
    aiosqlite >= 0.17.0
    bleak >=0.12.1
    paho-mqtt >=1.5.1
    PyYAML >= 5.4.1
    requests >= 2.26.0

package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
pyDE1 = services/*, services/*/*
pyDE1.database = schema/*.sql