[metadata]
name = pyDE1
version = 1.6.0a20221023
author = Jeff Kletsky
author_email = git-commits@allycomm.com
description = Controller for Decent Espresso DE1
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pyde1.readthedocs.io/en/beta/
project_urls =
    Bug Tracker = https://github.com/jeffsf/pyDE1/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: AsyncIO
    Intended Audience :: Developers
    Topic :: Home Automation
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.9
install_requires =
    aiosqlite >= 0.17.0
    bleak >=0.18.1
    paho-mqtt >=1.6.1
    PyYAML >= 6.0
    requests >= 2.28.1

package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
pyDE1 = services/*, services/*/*
pyDE1.database = schema/*.sql