[metadata]
name = pyDE1
version = 2.0.0b2
author = Jeff Kletsky
author_email = git-commits@allycomm.com
description = Controller for Decent Espresso DE1
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pyde1.readthedocs.io/en/stable/
project_urls =
    Bug Tracker = https://github.com/jeffsf/pyDE1/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: AsyncIO
    Intended Audience :: Developers
    Topic :: Home Automation
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.9
install_requires =
    aiosqlite >= 0.18.0
    bleak >= 0.19.4
    paho-mqtt >= 1.6.1
    pyparsing >= 3.0.9
    PyYAML >= 6.0
    requests >= 2.28.1
tests_require =
    pytest >= 7.2.0
    pytest-asyncio >= 0.20.2

package_dir =
    = src
packages = find:

scripts = src/pyDE1/services/runnable/pyde1-disconnect-btid.sh

[options.entry_points]
console_scripts =
    pyde1-run = pyDE1.run:pyde1_run
    pyde1-run-visualizer = pyDE1.services.runnable.pyde1_visualizer:pyde1_run_visualizer
    pyde1-replay = pyDE1.services.runnable.replay:pyde1_replay
    de1-profile-as-json = pyDE1.services.runnable.legacy_to_json:run_as_script

[options.packages.find]
where = src

[options.package_data]
pyDE1 = services/*, services/*/*
pyDE1.database = schema/*.sql
